# databricks-lakeflow

./: INSTALLATION.md  README.md  databricks.yml  pyproject.toml
fixtures/: test_iris.csv
resources/: emol_job.py  first_job.py  mlflow_job.py  sample_job.py  test_databricks_etl_pipeline.py
src/: init_spark.py  sample_notebook.ipynb
src/iris/: evaluate_model.py  extract_data.py  feature_engineering.py  register_model.py  test_model.py  train_model.py  validate_data.py
src/tasks/: extract_data.py  extract_links.py
src/tasks/iris/: extract_data.py  validate_data.py
src/test_databricks/: main.py
src/test_databricks_etl/: README.md
src/test_databricks_etl/transformations/: sample_trips_test_databricks.py  sample_zones_test_databricks.py
tests/: sample_taxis_test.py  test_feature_engineering.py  test_model_training.py
